--- a/UniversalServer/ILogger/ILogger.csproj
+++ b/UniversalServer/ILogger/ILogger.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AC36ABA4-B63B-4E27-BAB8-9F3D6F06D509}</ProjectGuid>
+    <ProjectGuid>{168B9CB6-B889-4529-9D4D-DD68D2D14546}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UniversalPluginFramework</RootNamespace>
-    <AssemblyName>UniversalPluginFramework</AssemblyName>
+    <RootNamespace>ILogger</RootNamespace>
+    <AssemblyName>ILogger</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,17 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface.cs" />
-    <Compile Include="ClientContext.cs" />
-    <Compile Include="ClientTracker.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerRSA.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ILogger\ILogger.csproj">
-      <Project>{168b9cb6-b889-4529-9d4d-dd68d2d14546}</Project>
-      <Name>ILogger</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
