vs bug, reloading project on a diffrent dev

--- a/UniversalServer/UniversalPluginFramework/UniversalPluginFramework.csproj
+++ b/UniversalServer/UniversalPluginFramework/UniversalPluginFramework.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientStorage.cs" />
     <Compile Include="Interface.cs" />
     <Compile Include="ClientContext.cs" />
     <Compile Include="ClientTracker.cs" />
